--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body onload="">
 <div class="container">
     <div class="img">
-        <img src="1.JPG" alt="">
+        <img src="1.jpg" alt="">
     </div>
     <p>哈哈哈，大笨蛋你被骗了</p>
     <p>不要生气只是个小玩笑</p>
